# napari-pymeshlab

./: .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: DESCRIPTION.md
docs/: demo.ipynb
src/napari_pymeshlab/: __init__.py  _reader.py  _sample_data.py  _widget.py  _writer.py  napari.yaml
src/napari_pymeshlab/_tests/: test_functions.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
