[metadata]
name = napari-pymeshlab
version = 0.0.1a
author = Zach Marin
author_email = zach.marin@yale.edu

license = MIT
description = Interfaces between napari and pymeshlab library to allow import, export and construction of surfaces.
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License


[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    npe2
    numpy
    pymeshlab

[options.packages.find]
where = src

[options.package_data]
napari-pymeshlab = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-pymeshlab = napari_pymeshlab:napari.yaml
